svn919: [#84] Initial java 9 fixes plus move some icons from prometheus to metis